<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTodoActivity">

    <EditText
            android:id="@+id/taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/task_titel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:ems="20"
            android:maxLines="1"
            android:maxLength="40"
            android:layout_alignParentLeft="true">

    </EditText>

    <TextView
            android:id="@+id/date"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_date"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="20"
            android:layout_alignParentLeft="true">

    </TextView>

    <TextView
            android:id="@+id/time"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_time"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="20"
            android:layout_alignParentLeft="true">

    </TextView>

    <CheckBox android:id="@+id/checkbox_imp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="190dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="10dp"
              android:text="@string/task_priority"/>


    <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="12"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:hint="Description"
            android:ems="20"
            android:lines="2"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textMultiLine"
            android:layout_alignParentLeft="true">

    </EditText>

    <CheckBox android:id="@+id/checkbox_done"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="335dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="10dp"
              android:text="@string/task_is_done"/>

    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="110dp"
            android:text="@string/cancel_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">

    </Button>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:maxWidth="50dp"
            android:maxHeight="20dp"
            android:layout_marginRight="110dp"
            android:text="@string/save_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

    </Button>

    <Button
            android:id="@+id/btn_update"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:maxWidth="50dp"
            android:maxHeight="20dp"
            android:layout_marginRight="110dp"
            android:text="@string/update_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

    </Button>
    <Button
            android:text="Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:id="@+id/btn_delete_todo" android:layout_alignBottom="@+id/btn_cancel"/>
    <Button
            android:id="@+id/btn_contact"
            android:layout_width="111dp"
            android:layout_height="40dp"
            android:text="@string/contact_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_alignTop="@+id/checkbox_done"
            android:layout_alignParentEnd="true" android:layout_marginEnd="28dp"/>

    <TextView
            android:id="@+id/tv_contact"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="20"
            android:textColor="@color/colorAccent"
            android:onClick="displayContactList"
            android:layout_alignStart="@+id/taskName" android:layout_alignParentBottom="true"
            android:layout_marginBottom="161dp">

    </TextView>


</RelativeLayout>

