<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/lightgrey">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_corners"
            android:id="@+id/email_activity_input"
            android:hint="@string/email_hint_login"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="180dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:background="@drawable/round_corners"
            android:id="@+id/passwd_activity_login"
            android:maxLength="6"
            android:hint="@string/passwd_hint_login"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_activity_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/button_activity_login"
            android:background="@drawable/round_corners"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passwd_activity_login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
            android:layout_marginEnd="148dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/welcome_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_login"
            android:textSize="20dp"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toTopOf="@+id/email_activity_input"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>